--- a/C/CH5/CH5.vcxproj
+++ b/C/CH5/CH5.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1296cf6d-4510-4112-a8ed-dd9d7b01f37d}</ProjectGuid>
-    <RootNamespace>ch2v</RootNamespace>
+    <ProjectGuid>{79f1b841-3eab-40ee-bb16-9fccc5f1168b}</ProjectGuid>
+    <RootNamespace>CH5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,7 +128,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
-    <ClCompile Include="pra.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
